--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastify": "^3.12.0",
     "fastify-cors": "^5.2.0",
     "fastify-swagger": "^4.3.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "nodemailer": "^6.5.0",
     "nodestorage": "^0.9.17",
