--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "mongoose": "^5.11.18",
     "nodemailer": "^6.5.0",
     "nodestorage": "^0.9.17",
-    "port-used": "^2.0.8"
+    "port-used": "^2.0.8",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "typescript": "^4.2.4"
   },
   "author": "",
   "license": "ISC"
