--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastify": "^3.12.0",
     "fastify-cors": "^5.2.0",
     "fastify-swagger": "^4.3.1",
+    "https": "^1.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "nodemailer": "^6.5.0",
