--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.5.4",
     "nodemailer": "^6.7.8",
     "nodestorage": "^0.9.17",
+    "ssh2": "^1.11.0",
     "table": "^6.8.0",
     "tcp-port-used": "^1.0.2",
     "ts-node": "^10.9.1"
