--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "https": "^1.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.5.4",
+    "node-ansible": "^0.5.5",
     "nodemailer": "^6.7.8",
     "nodestorage": "^0.9.17",
     "ssh2": "^1.11.0",
