--- a/playbooks/restart-host/roles/role1/tasks/main.yaml
+++ b/playbooks/restart-host/roles/role1/tasks/main.yaml
@@ -1,8 +1,6 @@
 # Reboot System #
 ## System Rebooting... ##
-- name: Reboot a Linux machine 
+- name: Host Machine Rebooting...
   reboot:
     test_command: uptime
   become: yes
-
-
